<?xml version="1.0"?>
<package>
  <name>zed_f9k_msg</name>
  <version>1.4.1</version>
  <description>

    zed_f9k_msg for air lab

  </description>
  <author>Wizard</author>
  <maintainer email="hitwizardicu@gmail.com">Veronica Lane</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <!-- <build_depend>sensor_msgs</build_depend> -->
    <build_depend>std_msgs</build_depend>
    <!-- <build_depend>geometry_msgs</build_depend> -->

    <!-- <run_depend>sensor_msgs</run_depend> -->
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <!-- <run_depend>geometry_msgs</run_depend> -->

    <build_depend>message_generation</build_depend>
    <!-- <exec_depend>message_runtime</exec_depend> -->
  <!-- <build_depend>message_generation</build_depend> -->
  <run_depend>message_runtime</run_depend>
  <!-- 
  exce_depend 以前对应的是 run_depend 现在非法
  -->

</package>
